@@ -83,6 +83,7 @@ NEW CHANGES:
              (+) init _cleanup_closedir_ variable with NULL;
              (+) init _cleanup_free_ variable with NULL;
              (+) init _cleanup_fclose_ variable with NULL;
+             (+) init _cleanup_umask_ variable;
         * other:
              (+) remove ACL support;
              (+) remove udev firmware loading support;
